// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image match snapshot 1`] = `
Object {
  "originalContentUrl": "https://...",
  "previewImageUrl": "https://...",
  "type": "image",
}
`;

exports[`ImageMap match snapshot 1`] = `
Object {
  "actions": Array [
    Object {
      "area": Object {
        "height": 321,
        "width": 654,
        "x": 123,
        "y": 456,
      },
      "label": "foo",
      "text": "bar",
      "type": "message",
    },
    Object {
      "area": Object {
        "height": 789,
        "width": 456,
        "x": 978,
        "y": 654,
      },
      "label": "foo",
      "linkUri": "https://...",
      "type": "uri",
    },
  ],
  "altText": "...",
  "baseSize": Object {
    "height": 999,
    "width": 1040,
  },
  "baseUrl": "https://...",
  "type": "imagemap",
  "video": undefined,
}
`;

exports[`ImageMap match snapshot 2`] = `
Object {
  "actions": Array [
    Object {
      "area": Object {
        "height": 321,
        "width": 654,
        "x": 123,
        "y": 456,
      },
      "label": "foo",
      "text": "bar",
      "type": "message",
    },
  ],
  "altText": "...",
  "baseSize": Object {
    "height": 999,
    "width": 1040,
  },
  "baseUrl": "https://...",
  "type": "imagemap",
  "video": Object {
    "area": Object {
      "height": 321,
      "width": 654,
      "x": 123,
      "y": 456,
    },
    "externalLink": undefined,
    "originalContentUrl": "https://...",
    "previewImageUrl": "https://...",
  },
}
`;

exports[`ImageMap match snapshot 3`] = `
Object {
  "actions": Array [
    Object {
      "area": Object {
        "height": 789,
        "width": 456,
        "x": 978,
        "y": 654,
      },
      "label": "foo",
      "linkUri": "https://...",
      "type": "uri",
    },
  ],
  "altText": "...",
  "baseSize": Object {
    "height": 999,
    "width": 1040,
  },
  "baseUrl": "https://...",
  "type": "imagemap",
  "video": Object {
    "area": Object {
      "height": 321,
      "width": 654,
      "x": 123,
      "y": 456,
    },
    "externalLink": Object {
      "label": "foo",
      "linkUri": "https://...",
    },
    "originalContentUrl": "https://...",
    "previewImageUrl": "https://...",
  },
}
`;

exports[`Sticker match snapshot 1`] = `
Object {
  "packageId": 1,
  "stickerId": 2,
  "type": "sticker",
}
`;
